fixing select component alignment

--- a/src/components/styles/OrderStatusSelect.css
+++ b/src/components/styles/OrderStatusSelect.css
@@ -39,8 +39,8 @@
 .status li p {
   font-size: 11px;
   text-align: center;
-  margin-top: 30px;
-  line-height: 17px;
+  margin-top: 34.5px;
+  line-height: 16px;
 }
 
 [type='radio'] {
